src/scss/style.scss
@use "@coreui/coreui/scss/coreui" as * with (
  $enable-deprecation-messages: false,
);
@use "@coreui/chartjs/scss/coreui-chartjs";
@use "vendors/simplebar";

body {
  background-color: var(--cui-tertiary-bg);
  margin: 0;
}

html {
  height: 100%;
}

.wrapper {
  width: 100%;
  padding-inline: var(--cui-sidebar-occupy-start, 0) var(--cui-sidebar-occupy-end, 0);
  will-change: auto;
  @include transition(padding .15s);
}

.header > .container-fluid,
.sidebar-header {
  min-height: calc(4rem + 1px);
}

.sidebar-brand-full {
  margin-left: 3px;
}

.sidebar-header {
  .nav-underline-border {
    --cui-nav-underline-border-link-padding-x: 1rem;
    --cui-nav-underline-border-gap: 0;
  }

  .nav-link {
    display: flex;
    align-items: center;
    min-height: calc(4rem + 1px);
  }
}

.sidebar-toggler {
  margin-inline-start: auto;
}

.sidebar-narrow,
.sidebar-narrow-unfoldable:not(:hover) {
  .sidebar-toggler {
    margin-inline-end: auto;
  }
}

.header > .container-fluid + .container-fluid {
  min-height: 3rem;
}

.footer {
  min-height: calc(3rem + 1px);
}


:root {
  --sidebar-bg: #22223b; 
  --sidebar-color: #f2e9e4;
  --sidebar-active-bg: #f2e9e4;
  --sidebar-active-color: #22223b;
  --sidebar-border: #22223b; 
}



.sidebar,
.sidebar-header,
.sidebar-brand-full {
  background-color: var(--sidebar-bg) !important;
  color: var(--sidebar-color) !important;
  border: none !important;
  box-shadow: none !important;
}

.sidebar-header,
.sidebar-brand-full {
  border-bottom: 1px solid #22223B;
}

.sidebar,
.sidebar-header,
.sidebar-brand-full {
  border-right: 1px solid var(--sidebar-border);
}

.sidebar .nav-link, .sidebar .nav-link:visited {
  color: var(--sidebar-color) !important;
}

.sidebar .nav-link.active, .sidebar .nav-link:focus, .sidebar .nav-link:hover {
  background-color: var(--sidebar-active-bg) !important;
  color: var(--sidebar-active-color) !important;
}

@include color-mode(dark) {
  body {
    background-color: var(--cui-dark-bg-subtle);
  }

  .footer {
    --cui-footer-bg: var(--cui-body-bg);
  }
}

.bg {
  animation: slide 3s ease-in-out infinite alternate;
  background-image: linear-gradient(-60deg, #4a4e69 50%, #22223b 50%);
  bottom: 0;
  left: -50%;
  opacity: 0.5;
  position: fixed;
  right: -50%;
  top: 0;
  z-index: -1;
}

.bg2 {
  animation-direction: alternate-reverse;
  animation-duration: 4s;
}

.bg3 {
  animation-duration: 5s;
}

.content {
  background-color: rgba(255, 255, 255, 0.8);
  border-radius: 0.25em;
  box-shadow: 0 0 0.25em rgba(0, 0, 0, 0.25);
  box-sizing: border-box;
  left: 50%;
  padding: 10vmin;
  position: fixed;
  text-align: center;
  top: 50%;
  transform: translate(-50%, -50%);
}

h1 {
  font-family: monospace;
}

@keyframes slide {
  0% {
    transform: translateX(-25%);
  }
  100% {
    transform: translateX(25%);
  }
}

